<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ca.footeware</groupId>
	<artifactId>javafx.journal</artifactId>
	<version>1.6.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<javafx.platform>linux</javafx.platform>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>25.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>25.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>25.0.1</version>
			<classifier>${javafx.platform}</classifier>
		</dependency>
		<!--notification toaster-->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.2.3</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<javafx.platform>win</javafx.platform>
			</properties>
		</profile>

		<profile>
			<id>linux</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<javafx.platform>linux</javafx.platform>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<release>25</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<id>jlink</id>
						<phase>package</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
						<configuration>
							<mainClass>ca.footeware.javafx.journal.App</mainClass>
							<jlinkImageName>journal</jlinkImageName>
							<compress>2</compress>
							<launcher>launcher</launcher>
							<options>
								<option>--enable-native-access=javafx.graphics</option>
							</options>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
